respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <label>Conversion Rate to Currency Header</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTC_Service_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Rate</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROJ_CountryOfDischarge__c</fullName>
        <formula>PROJ_Site_of_discharge__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_CountryOfLoad__c</fullName>
        <formula>PROJ_Site_of_load__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_Modalidad__c</fullName>
        <label>Modalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 FT Straight Truck</fullName>
                </value>
                <value>
                    <fullName>18 FT Straight Truck</fullName>
                </value>
                <value>
                    <fullName>20 FR</fullName>
                </value>
                <value>
                    <fullName>20 HC</fullName>
                </value>
                <value>
                    <fullName>20 OT</fullName>
                </value>
                <value>
                    <fullName>20 RF</fullName>
                </value>
                <value>
                    <fullName>20 DC</fullName>
                </value>
                <value>
                    <fullName>20 pies</fullName>
                </value>
                <value>
                    <fullName>24 FT Straight Truck</fullName>
                </value>
                <value>
                    <fullName>3.5 Caja</fullName>
                </value>
                <value>
                    <fullName>3.5 Plataforma</fullName>
                </value>
                <value>
                    <fullName>40 DC</fullName>
                </value>
                <value>
                    <fullName>40 FR</fullName>
                </value>
                <value>
                    <fullName>40 OT</fullName>
                </value>
                <value>
                    <fullName>40 RF</fullName>
                </value>
                <value>
                    <fullName>40 HC</fullName>
                </value>
                <value>
                    <fullName>40 pies</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>53 FT Tractor Trailer</fullName>
                </value>
                <value>
                    <fullName>Caja 48 FT</fullName>
                </value>
                <value>
                    <fullName>Caja 53 FT</fullName>
                </value>
                <value>
                    <fullName>Cama Baja</fullName>
                </value>
                <value>
                    <fullName>Camion 3.5 Ton 20ft Abierto</fullName>
                </value>
                <value>
                    <fullName>Camion 3.5 Ton 20ft Cerrado</fullName>
                </value>
                <value>
                    <fullName>Camioneta Redilas</fullName>
                </value>
                <value>
                    <fullName>Carga General CARGA</fullName>
                </value>
                <value>
                    <fullName>Carga General EXTRAS</fullName>
                </value>
                <value>
                    <fullName>Carga General FTL</fullName>
                </value>
                <value>
                    <fullName>Carga General LCL</fullName>
                </value>
                <value>
                    <fullName>Carga General LTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROJ_Primary_Key__c</fullName>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_Ruta__c</fullName>
        <formula>PROJ_Site_of_load__r.Name + &quot; - &quot; + PROJ_Site_of_discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ruta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_Site_of_discharge2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site of discharge</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products (Site of discharge)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROJ_Site_of_discharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site of discharge</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Products (Site of discharge)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROJ_Site_of_load2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site of load</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products (Site of load)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROJ_Site_of_load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site of load</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROJ_StateOfDischarge__c</fullName>
        <formula>PROJ_Site_of_discharge__r.State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State of discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_State__c</fullName>
        <formula>PROJ_Site_of_load__r.State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State of load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_WTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Category_info__c</fullName>
        <label>Rate Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desbloquear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sap_Service_Type__c</fullName>
        <label>Sap Service Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searchable_name__c</fullName>
        <formula>PROJ_Site_of_load__r.Country__r.Name + &apos;-&apos; + PROJ_Site_of_load__r.State__r.Name + &apos;-&apos; + PROJ_Site_of_load__r.Name + &apos;-&apos; + PROJ_Site_of_discharge__r.Country__r.Name + &apos;-&apos; + PROJ_Site_of_discharge__r.State__r.Name + &apos;-&apos; + PROJ_Site_of_discharge__r.Name + &apos;-&apos; + text(PROJ_Modalidad__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Searchable name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <label>Sell Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Rate_Name__c</fullName>
        <label>Rate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Std_Buy_Amount__c</fullName>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sap_service_types_info__c</fullName>
        <label>SAP Service Type Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>